[package]
name = "bc_04_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
sha256 = "1.1.3"
bincode = "1.3.3"
serde = { version = "1.0.163", features = ["derive"] }
pickledb = "0.5.1"
anyhow = "1.0.71"
